<resources>
    <string name="app_name">TalkHive</string>
    <string name="signup_button_name">Sign Up</string>
    <string name="have_login_account_text">do not have an account?Sign Up</string>
    <string name="emailhint">johndoe@gmail.com</string>
    <string name="password_hint">password</string>
    <string name="signin_button_name">Sign In</string>
    <string name="login_button">Login</string>
    <string name="talk_hive_logo">Talk Hive</string>
    <string name="verification_hint">00000</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_msg_hint">Hello!!!! How are you doin?</string>
    <string name="name_hint">john\n</string>
    <string name="signin">Add</string>
    <string name="cancel">Cancel\n</string>
    <string name="add_user">Add Email\n</string>
    <string name="profile_menu_item">Profile</string>
    <string name="logout_menu_item">Logout</string>
    <string name="settings_menu_item">Settings</string>
</resources>