<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="@dimen/_12dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48dp"
        android:textColor="@color/white_smoke"
        android:text="@string/add_user"
        android:gravity="start"
        android:textSize="@dimen/_25dp"/>

    <EditText
        android:id="@+id/email_et"
        style="@style/widget_edit_text_style"
        android:layout_marginTop="@dimen/_8dp"
        android:hint="@string/emailhint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/pet_name_et"
        style="@style/widget_edit_text_style"
        android:hint="@string/name_hint"
        android:inputType="text" />
</LinearLayout>