<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragments.SignupFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widgets_margin_top"
        android:gravity="center"
        android:text="@string/talk_hive_logo"
        android:textColor="@color/white"
        android:textSize="@dimen/logo_size"
        android:textStyle="italic|bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <EditText

            android:id="@+id/email_text"
            style="@style/widget_edit_text_style"


            android:hint="@string/emailhint"
            android:inputType="textEmailAddress" />

        <EditText

            android:id="@+id/password_text"
            style="@style/widget_edit_text_style"

            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirm_password_text"
            style="@style/widget_edit_text_style"

            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signup_button"

            style="@style/widget_button_style"
            android:layout_width="wrap_content"
            android:text="@string/signup_button_name" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>